# lockbox

./: .gitignore  Cargo.toml  README.md  config.toml.example  sample.lckbx  sample_keys.md  test.md
src/: main.rs
