[package]
name = "lockbox"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10.3"
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
rand = "0.10.1"
resend-rs = "0.25.1"
serde = "1.0.228"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"
zeroize = "1.8.2"
